<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">haliva-meetly</string>
    <string name="action_settings">Settings</string>
    <string name="welcomeTitle">Welcome to Meetly!</string>
    <string name="title_activity_splash">Meetly</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="createEventBtn">Create Event</string>
    <string name="skip">SKIP</string>
    <string name="title_activity_maps">Map</string>
    <string name="address">Currently at: </string>
    <string name="city">City: </string>
    <string name="country">Country: </string>
    <string name="create">Create Event</string>
    <string name="endTime">End Time</string>
    <string name="startTimeOfEvent">Start Time</string>
    <string name="dateOfEvent">Date of Event</string>
    <string name="eventTitleText">Event Title</string>
    <string name="title_activity_view_event_details">ViewEventDetails</string>

    <!-- View Event Details Texts -->
    <string name="event_details_main_title">Event</string>
    <string name="event_details_main_new">New Event</string>
    <string name="event_details_main_changed">Changed Event</string>
    <string name="event_details_name">Event Name</string>
    <string name="event_details_date">Date:</string>
    <string name="event_details_time">Time:</string>
    <string name="event_details_duration">Duration:</string>
    <string name="event_details_status">Status:</string>
    <string name="event_change_status_button">Share Event</string>
    <string name="modifyEventBtn">Modify Event</string>
    <string name="title_activity_modify_event">ModifyEvent</string>
    <string name="update_list_of_events">Pull Events</string>
    <string name="user_login_button">Login</string>
    <string name="user_logout_button">Logout</string>

    <!-- Login Activity Texts -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_login_title">User Login</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="login_button_login">Login</string>
    <string name="cancel_button_login">Cancel</string>

    <string name="username_display" />

</resources>
