<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.sfu.haliva_meetly.ViewEventDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_main_title"
        android:id="@+id/eventDetailsMainTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_name"
        android:id="@+id/eventDetailsName"
        android:layout_below="@+id/eventDetailsMainTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_date"
        android:id="@+id/eventDetailsDate"
        android:textSize="20dp"
        android:layout_below="@+id/eventDetailsName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_time"
        android:id="@+id/eventDetailsTime"
        android:layout_below="@+id/eventDetailsDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_duration"
        android:id="@+id/eventDetailsDuration"
        android:layout_below="@+id/eventDetailsTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/eventDetailsDuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_details_status"
        android:id="@+id/eventDetailsStatus"
        android:textSize="20dp"
        android:layout_below="@+id/changeStatusButton"
        android:layout_alignLeft="@+id/changeStatusButton"
        android:layout_alignStart="@+id/changeStatusButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_change_status_button"
        android:id="@+id/changeStatusButton"
        android:layout_below="@+id/eventDetailsMainTitle"
        android:layout_alignRight="@+id/map"
        android:layout_alignEnd="@+id/map"
        android:layout_alignLeft="@+id/modifyEventBtn"
        android:layout_alignStart="@+id/modifyEventBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifyEventBtn"
        android:id="@+id/modifyEventBtn"
        android:clickable="true"
        android:onClick="modifyEventDetails"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
