<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ca.sfu.haliva_meetly.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/user_login_title"
        android:id="@+id/userLoginTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameLogin"
        android:text="@string/username_login"
        android:layout_below="@+id/userLoginTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLogin"
        android:text="@string/password_login"
        android:layout_below="@+id/usernameLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_login"
        android:id="@+id/loginBtnLogin"
        android:layout_below="@+id/passwordLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:onClick="setupLoginBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_login"
        android:id="@+id/cancelBtnLogin"
        android:layout_alignTop="@+id/loginBtnLogin"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="setupCancelBtn" />
</RelativeLayout>
