<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createEventBtn"
        android:id="@+id/createEventBtn"
        android:clickable="true"
        android:onClick="CreateEventButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/updateEventsBtn"
        android:layout_alignEnd="@+id/updateEventsBtn"
        android:layout_alignLeft="@+id/updateEventsBtn"
        android:layout_alignStart="@+id/updateEventsBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username_display"
        android:id="@+id/usernameDisplay"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignLeft="@+id/scrollView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/address"
        android:id="@+id/addressTxt"
        android:layout_below="@+id/usernameDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/currentAddressTxt"
        android:layout_below="@+id/addressTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/currentCityTxt"
        android:layout_below="@+id/currentAddressTxt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="291dp"
        android:layout_height="437dp"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:layout_alignParentBottom="true">

        <TableLayout
            android:id="@+id/events_table"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp">
        </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_login_button"
        android:id="@+id/userLoginBtn"
        android:onClick="UserLoginButton"
        android:layout_alignTop="@+id/addressTxt"
        android:layout_toLeftOf="@+id/createEventBtn"
        android:layout_toStartOf="@+id/createEventBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_list_of_events"
        android:id="@+id/updateEventsBtn"
        android:layout_below="@+id/addressTxt"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickPullEvents" />

</RelativeLayout>